# agent-belt

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  pyproject.toml  requirements.txt
.frogbot/: frogbot-config.yml
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_agent.yml
.github/workflows/: cla.yml  frogbot-scan-pull-request.yml  release.yml  removeLabel.yml  test.yml
docs/glossary/: AGENT-FEATURES.md  ARCHITECTURE.md  CI.md  CLI.md  CONFIGURATION.md  OUTCOMES.md  PLUGGABILITY.md  SANDBOXING.md  SCENARIOS.md  SCORING.md  SECURITY-MODEL.md
examples/: README.md  belt.yaml.example
examples/custom-agent/: README.md  echo_agent.py  pyproject.toml
examples/custom-agent/scenarios/echo/: _config.json  hello.json  multi_turn_with_expectations.json
examples/exporter-config/: exporters.yaml
examples/fixtures/: .gitignore  sample-resource.txt
examples/fixtures/bookstore-api/: README.md  jest.config.js  package.json  tsconfig.json
examples/fixtures/folio/: .gitignore  .mcp.json  README.md  pyproject.toml
examples/fixtures/folio/.claude/: settings.json
examples/fixtures/folio/.claude/commands/: refund.md
examples/fixtures/folio/.claude/plugins/folio-ops/.claude-plugin/: plugin.json
examples/fixtures/folio/.claude/plugins/folio-ops/commands/: lookup.md
examples/fixtures/folio/.claude/plugins/folio-ops/skills/inventory-audit/: SKILL.md
examples/fixtures/folio/.claude/skills/bookstore-assistant/: SKILL.md
examples/fixtures/folio/data/: orders_seed.json  seed.sql
examples/fixtures/folio/folio/: __init__.py  api.py  db.py  mcp_server.py  reset.py  server.py
examples/fixtures/folio/folio/tests/: smoke_mcp.py
examples/fixtures/folio/tests/: test_api.py  test_db.py  test_mcp.py
examples/fixtures/programmatic-setup/: .gitignore  .mcp.json
examples/fixtures/sample-project/: README.md  pyproject.toml
examples/fixtures/tasktracker/: README.md  pyproject.toml
examples/fixtures/urlshortener/: Dockerfile  Makefile  README.md  go.mod
examples/sandbox-images/: Dockerfile.cursor.example  Dockerfile.generic  README.md
examples/scenarios/showcase/: README.md
examples/scorer-config/: consensus.yaml  custom-dimensions.yaml  judges.yaml  per-turn-judging.yaml
scripts/: check_design.py  verify_judge_infra_failures.py  verify_judge_preflight.py
src/belt/: __init__.py  _bundled.py  _git.py  _internal_envvars.py  _io.py  _logging.py  _public_api.py  _redact.py  _regex_policy.py  _safe.py  _sanitize.py  _ui.py  cli.py  cli_utils.py  config.py  constants.py  entities.py  envvars.py  errors.py  filter.py  manifest.py  progress.py  scenario.py  schema.py
src/belt/agent/: __init__.py  base.py  claude_code.py  codex.py  copilot.py  cursor.py  error_types.py  gemini.py  goose.py  opencode.py  registry.py  scoring.py
src/belt/aggregator/: __init__.py  render_markdown.py  render_terminal.py  stats.py  thresholds.py
src/belt/benchmark_card/: __init__.py  build.py  collect.py  entities.py  io.py  render.py
src/belt/commands/: __init__.py  aggregate.py  compare.py  doctor.py  eval.py  export.py  gc.py  quickstart.py  run.py  score.py  view.py  watch.py
src/belt/exporter/: __init__.py  base.py  csv.py  entities.py  helpers.py  jsonl.py  junit.py  markdown.py  registry.py
src/belt/parser/: __init__.py  ndjson.py  scenario.py  strict.py
src/belt/runner/: __init__.py  context.py  entities.py  orchestrator.py  workspace.py
tests/: conftest.py  test_agent_doc_parity.py  test_bundled.py  test_check_design.py  test_cli.py  test_cli_doc_parity.py  test_cli_order.py  test_cli_smoke.py  test_cli_utils.py  test_config.py  test_dependency_groups_match.py  test_doctor_ollama_trailing.py  test_doctor_providers.py  test_e2e_agent_errors.py  test_e2e_scenarios_skipped.py  test_entities.py  test_envvars.py  test_error_types_doc_parity.py  test_errors.py  test_example_model_centralization.py  test_example_scenarios.py  test_exporter_doc_parity.py  test_filter.py  test_fixture_resources.py  test_git.py  test_integration_flow.py  test_io.py  test_live_progress.py  test_logging.py  test_manifest.py  test_no_inline_user_regex.py  test_no_personal_paths.py  test_oss_readiness_regressions.py  test_outcomes_dir.py  test_packaging.py  test_preflight_judge_model.py  test_progress.py  test_provider_doc_parity.py  test_public_api.py  test_redact.py  (+16 more)
tests/agent/: test_agent_parity.py  test_base.py  test_capabilities.py  test_claude_code.py  test_codex.py  test_copilot.py  test_cursor.py  test_error_types.py  test_gemini.py  test_goose.py  test_opencode.py  test_registry.py  test_scoring.py
tests/aggregator/: __init__.py  test_agent_errors.py  test_dry_run_footnote.py  test_judge_infra_failures.py  test_multi_judge_non_consensus_rendering.py  test_render_diet.py  test_reply_pattern_render_safety.py  test_task_quality_split.py  test_verdict_scales_coverage.py
tests/benchmark_card/: conftest.py  test_agent_errors_block.py  test_build.py  test_collect.py  test_entities.py  test_io.py  test_render.py
tests/commands/: test_aggregate.py  test_aggregate_resolve_agent.py  test_aggregate_scenarios_skipped.py  test_compare.py  test_doctor.py  test_doctor_auth_hedge.py  test_eval.py  test_quickstart.py  test_run_meta_groups.py  test_score.py  test_view.py  test_watch.py
tests/exporter/: conftest.py  test_base.py  test_command_export.py  test_csv.py  test_entities.py  test_helpers.py  test_jsonl.py  test_junit.py  test_markdown.py  test_per_turn_export.py  test_registry.py
tests/parser/: test_scenario.py  test_strict.py
tests/runner/: test_create_agent.py  test_orchestrator.py  test_orchestrator_workspace.py  test_render_turn_message.py  test_workspace.py  test_workspace_e2e.py
tests/scorer/: test_dimension_resolution.py  test_dry_run.py  test_payloads.py  test_pipeline_judge_errored.py  test_regex_policy.py  test_registry.py  test_scorer_config_schema.py  test_validate_scorers_preflight.py
tests/test_runner/: test_filter.py
(+239 files in other folders)
