[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "belt-echo"
version = "0.2.0"
description = "Minimal belt agent example - echoes input back as output."
requires-python = ">=3.11"
dependencies = ["agent-belt"]

[project.entry-points."belt.agents"]
echo = "echo_agent:EchoAgentAdapter"

[tool.setuptools]
py-modules = ["echo_agent"]
