[project]
name = "folio"
version = "0.1.0"
description = "Folio - a deterministic bookstore SaaS used by the agent-belt launch demo. REST API + MCP HTTP on one port."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "mcp>=1.0",
    "pydantic>=2.0",
    "httpx>=0.24",
]

[project.scripts]
folio-server = "folio.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["folio"]

[dependency-groups]
dev = ["pytest>=8.0"]

# Anchor pytest's rootdir here so it doesn't climb up to agent-belt's
# pyproject.toml and inherit ``testpaths = ["tests"]`` (which then resolves
# relative to the *outer* repo). The empty section is enough to mark this
# file as the root config for pytest discovery.
[tool.pytest.ini_options]
testpaths = ["tests"]
